feat: added redis to token module
