# docs/swagger.json
@@ -31,7 +31,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseUser"
+                            "$ref": "#/definitions/models.UserModel"
                         }
                     },
                     "500": {
@@ -214,7 +214,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseUser"
+                            "$ref": "#/definitions/models.UserModel"
                         }
                     },
                     "500": {
@@ -252,7 +252,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseUser"
+                            "$ref": "#/definitions/models.UserModel"
                         }
                     },
                     "500": {
@@ -290,7 +290,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseUser"
+                            "$ref": "#/definitions/models.UserModel"
                         }
                     },
                     "500": {
@@ -328,7 +328,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseUser"
+                            "$ref": "#/definitions/models.UserModel"
                         }
                     },
                     "500": {
@@ -373,7 +373,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseUser"
+                            "$ref": "#/definitions/models.UserModel"
                         }
                     },
                     "500": {
@@ -469,7 +469,7 @@
                 }
             }
         },
-        "models.ResponseUser": {
+        "models.UserModel": {
             "type": "object",
             "properties": {
                 "id": {
